# multi_sig_wallet

./: .binpath  Cargo.toml  README.md
src/: lib.rs  wallet.rs
tests/: wallet_test.rs
