[package]
name = "multi_sig_wallet"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Chuankai Liu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive", "full"] }
primitive-types = { version = "0.11.1", default-features = false, features = ["scale-info"]}

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git" }
# gear-core = { git = "https://github.com/gear-tech/gear.git" }

[profile.release]
lto = true
opt-level = 's'
